--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,15 @@
+# Packages with no specific version: ---------------------------------------
+pycodestyle
+pydocstyle
+# Packages with specified version: -----------------------------------------
 fastapi==0.82.0
 inflection==0.5.1
 pandas==1.4.1
 uvicorn==0.18.3
-numpy==1.19.5
+numpy==1.21.0
+scipy==1.10.0
+scikit-learn==1.2.0
 requests==2.27.1
+pytest==7.2.0
+pytest-cov==4.0.0
+pre-commit==2.21.0
