--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -14,3 +14,7 @@ pytest==7.2.0
 pytest-cov==4.0.0
 pre-commit==2.21.0
 pydantic==1.10.4
+inflection==0.5.1
+seaborn==0.12.2
+#scikit-learn-intelex==2023.0.2
+scikit-plot==0.3.7
