--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,3 @@
-#  for no local repo
-# -   repo: https://github.com/pycqa/pydocstyle
-#     rev: 4.0.0  # pick a git hash / tag to point to
-#     hooks:
-#     -   id: pydocstyle
-
 repos:
 -   repo: local
     hooks:
@@ -20,4 +14,20 @@ repos:
         language: system
         stages: [commit]
         types: [python]
-        #exclude: '(.ipynb|.pkl|.md|.yaml|.yml|.sh|.bash|.txt)'
+-   repo: local
+    hooks:
+    - id: pytest
+      name: pytest
+      language: system
+      entry: python3 -m pytest --cov=tests --cov-report html:cov_html
+      always_run: true
+      pass_filenames: false
+      stages: [commit]
+-   repo: local
+    hooks:
+      - id: coverage
+        name: coverage
+        entry: bash get_coverage.sh
+        language: system
+        pass_filenames: false
+        stages: [commit]
