feat: add validations on request

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,12 @@
 repos:
--   repo: local
+  - repo: local
     hooks:
       - id: pydocstyle
         name: pydocstyle
         entry: pydocstyle
         language: system
         stages: [commit]
--   repo: local
+  - repo: local
     hooks:
       - id: pycodestyle
         name: pycodestyle
@@ -14,20 +14,21 @@ repos:
         language: system
         stages: [commit]
         types: [python]
--   repo: local
+  - repo: local
     hooks:
-    - id: pytest
-      name: pytest
-      language: system
-      entry: python3 -m pytest --cov=tests --cov-report html:cov_html
-      always_run: true
-      pass_filenames: false
-      stages: [commit]
--   repo: local
-    hooks:
-      - id: coverage
-        name: coverage
-        entry: bash get_coverage.sh
+      - id: pytest
+        name: pytest
         language: system
+        entry: python3 -m pytest --cov=tests --cov-report html:cov_html
+        always_run: true
         pass_filenames: false
         stages: [commit]
+# -   repo: local
+#     hooks:
+#       - id: coverage
+#         name: coverage
+#         entry: bash get_coverage.sh
+#         language: system
+#         pass_filenames: false
+#         stages: [commit]
+#
